# enclave-kms-test

./: .env.example  Cargo.toml  Dockerfile.server  README.md  build-binaries.sh  ssh.sh  tf-complete.sh  tf.sh
client/: Cargo.toml
client/src/: command_parser.rs  lib.rs  main.rs  protocol_helpers.rs  utils.rs
scripts/: 0-run-vsock-proxy.sh  1-build-image.sh  2-build-enclave.sh  3-run-enclave.sh  4-run-client.sh  5-kill-enclaves.sh
server/: Cargo.toml
server/src/: command_parser.rs  lib.rs  main.rs  protocol_helpers.rs  utils.rs
types/: Cargo.toml
types/src/: lib.rs
