[package]
name = "vsock-client"
edition = "2018"

[dependencies]
clap = "3.2"
log = "0.4"
nix = "0.20"
byteorder = "1.3"
aws-config = "1.1.2"
aws-sdk-kms = "1.10.0"
tokio = { version = "1.35.1", features = ["full"] }
base64 = "0.21.7"
dotenv = "0.15.0"
aws-sdk-sts = "1.10.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
types = { path = "../types" }